--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -592,7 +592,7 @@
 
 
   /* Icon-Only Button Configurations */
-  &:is(.nds-icon-only, .nds-circle, :has(i, img, svg):not(:has(span, p, div, h1, h2, h3, h4, h5, h6))) {
+  &:is(.nds-icon-only, .nds-circle/*, :has(i, img, svg):not(:has(span, p, div, h1, h2, h3, h4, h5, h6)) */) {
     justify-content: center;
     width: var(--btn-size);
     padding: 0 var(--spacing-md);
