--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -275,6 +275,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  gap: var(--_card-gap);
 
 }
 
