--- a/_sass/layout/_sectionLayout.scss
+++ b/_sass/layout/_sectionLayout.scss
@@ -298,6 +298,7 @@
     * {
         text-align: center;
         margin-inline: auto;
+        justify-content: center;
     }
 }
 
